cicd/tekton/release/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tag-release-pipeline-trigger
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/release-tag)$ $1/ redirect;
spec:
  rules:
    - host: tekton-pipelines.iam.forgeops.com
      http:
        paths:
          - backend:
              serviceName: el-github-tag-listener
              servicePort: 8080
            path: /release-tag/?(.*)
          - backend:
              serviceName: el-github-branch-listener
              servicePort: 8080
            path: /branch/?(.*)
  tls:
    - hosts:
        - cicd.iam.forgeops.com
      secretName: sslcert
